--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ img.site-image.logo {
     border-radius: 25px;
 }
 .button_five2 a:hover {
-    background-color:#4CAF50;
+    background-color:#5252f3;
     color: #fff;
 }
 nav.navbar.navbar-expand-lg.bg-body-tertiary {
@@ -71,7 +71,7 @@ nav.navbar.navbar-expand-lg.bg-body-tertiary {
     padding: 30px 0px 0px 0px;
 }
 .button_five3 a:hover{
-    background-color: #4CAF50;
+    background-color: #5252f3;
     color: #fff;
     }
 video.video {
@@ -124,7 +124,7 @@ video.video {
 }
 
 .button_third a:hover{
-background-color: #4CAF50;
+background-color: #5252f3;
 color: #fff;
 }
 ul {
@@ -188,7 +188,7 @@ ul.kau {
 }
 
 .button_four a:hover{
-                    background-color: #4CAF50;
+                    background-color: #5252f3;
                     color: #fff;
 }
 
@@ -226,7 +226,7 @@ box-shadow: 0px 5px 5px 0px #FFF;
 }
 
 .name-toggle-btn1.active {
-background-color: #4CAF50;
+background-color: #5252f3;
 color: white;
 }
 
@@ -289,12 +289,12 @@ border-top: none;
     padding: 30px 0px;
 }
 .button_five a:hover{
-            background-color: #4CAF50;
+            background-color: #5252f3;
             color: #fff;
             
 }
 .button_5 a:hover {
-    background-color:#4CAF50;
+    background-color:#5252f3;
     color: #fff;
 }
 .btn_5{
